[package]
authors = ["eta <hi@theta.eu.org>"]
name = "gps-to-irc"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "0.3"
cortex-m = "0.5"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3.1"
nb = "0.1"
panic-semihosting = "0.5"

[dependencies.nmea-slimline]
branch = "master"
git = "https://github.com/eeeeeta/rust-nmea"

[dependencies.stm32f103xx-hal]
branch = "master"
git = "https://github.com/japaric/stm32f103xx-hal"

[profile.release]
lto = true
debug = true
opt-level = "z"
